New Server Boost Menu has taken over

--- a/My_Theme_Collection/NewBNHA.theme.css
+++ b/My_Theme_Collection/NewBNHA.theme.css
@@ -2,7 +2,7 @@
  * @name New BNHA Theme
  * @author ShadowDevilsAvenged
  * @description Newer BNHA theme for my return
- * @version 4.5
+ * @version 4.6
  */
 
 /* Main Background */
@@ -17,9 +17,7 @@
     background-color: #2AB;
 }
 
-.theme-dark .perksModal-CLcR1c {
-    background-color: transparent;
-}
+
 
 .preview-3SR4Rd {
     color: white;
@@ -3188,23 +3186,6 @@
     box-shadow: none;
 }
 
-
-.theme-dark .perk-19D_HN {
-    background-color: rgba(0,0,0,.4);
-}
-
-.divider-1MSaR9 {
-    background: none;
-}
-
-.theme-dark .barBackground-unEPDT {
-    background-color: transparent;
-}
-
-.barSecondary-VouwoY {
-    background-color: rgba(255,255,255,.12);
-}
-
 .theme-dark .elevationBorderLow-3_3rXL {
     box-shadow: none;
 }
@@ -3284,11 +3265,6 @@
     color: white;
 }
 
-.theme-dark .tierBody-3ju-rc {
-    background-color: transparent;
-    color: white;
-}
-
 .body-1JxAWB a,
 .text-2iTkaw a {
     color: #FFFF90;
@@ -3301,14 +3277,6 @@
 
 .stickyHeaderElevated-dNSSrJ {
     box-shadow: none;
-}
-
-.ctaBar-Nhk8yY {
-    background-color: rgba(0,0,0,.6);
-}
-
-.theme-dark .tierMarkerBackground-G8FoN4 {
-    background-color: transparent;
 }
 
 .topic-11NuQZ {
@@ -3585,29 +3553,6 @@
     background-color: transparent;
 }
 
-.badgeIconWithSubscribers-2WYJsQ,
-.theme-dark .tierMarkerInProgress-2Tdxjz .currentTierIcon-2rq-bv.tier3Icon-959FdD,
-.theme-dark .icon-3dkE_X,
-.tierMarkerLabelPlusIcon-2zLkr7 {
-    color: #FF2EB9;
-}
-
-.tierMarkerInProgress-2Tdxjz[style*="background:"] {
-    background: #21252B !important;
-}
-
-.tierMarkerAccomplished-1SkbEJ[style*="background:"] {
-    background: #FF2EB9 !important;
-}
-
-.barForeground-2kwBa_ {
-    background-color: #FF2EB9;
-}
-
-.tierMarkerLabelText-1wk8KK:not(.isAccomplished-2NcqRT):hover {
-    background-color: rgba(255, 46, 185, .3);
-}
-
 .premiumIcon-3qxLdX {
     color: #FF2EB9;
 }
@@ -3880,10 +3825,6 @@
     background-color: rgba(0, 0, 0, .3);
 }
 
-.theme-dark .tierHeaderLocked-3ItHYn {
-    background-color: rgba(0, 0, 0, .4);
-    color: rgba(255, 255, 255, .4);
-}
 
 .theme-dark .content-3nJg0c:before {
     background-color: transparent;
@@ -4178,6 +4119,10 @@
 
 .footer-IubaaS {
     background-color: transparent;
+}
+
+.bd-sidebar-header h2 {
+    color: white;
 }
 /* Main Color */
 .main-color{color: #2AB;}
