--- a/My_Theme_Collection/TeamRam.theme.css
+++ b/My_Theme_Collection/TeamRam.theme.css
@@ -2,7 +2,7 @@
  * @name Team Ram
  * @author ShadowDevilsAvenged
  * @description Team Ram is back once again(big request to bring this back)
- * @version 2.2
+ * @version 2.3
 */
 
 /* Ram Main Picture */
@@ -2421,9 +2421,7 @@
     background-color: #1c1c1c !important;
 }
 
-.theme-dark .perksModal-CLcR1c {
-    background-color: rgba(0, 0, 0, .4);
-}
+
 
 .theme-dark .inviteRow-3vmB7i:hover {
     background-color: rgba(0, 0, 0, .2);
@@ -3257,22 +3255,6 @@
 }
 
 
-.theme-dark .perk-19D_HN {
-    background-color: rgba(0,0,0,.4);
-}
-
-.divider-1MSaR9 {
-    background: none;
-}
-
-.theme-dark .barBackground-unEPDT {
-    background-color: transparent;
-}
-
-.barSecondary-VouwoY {
-    background-color: rgba(255,255,255,.12);
-}
-
 .theme-dark .elevationBorderLow-3_3rXL {
     box-shadow: none;
 }
@@ -3360,11 +3342,6 @@
     color: white;
 }
 
-.theme-dark .tierBody-3ju-rc {
-    background-color: transparent;
-    color: white;
-}
-
 .body-1JxAWB a,
 .text-2iTkaw a {
     color: #FFFF90;
@@ -3377,14 +3354,6 @@
 
 .stickyHeaderElevated-dNSSrJ {
     box-shadow: none;
-}
-
-.ctaBar-Nhk8yY {
-    background-color: rgba(0,0,0,.6);
-}
-
-.theme-dark .tierMarkerBackground-G8FoN4 {
-    background-color: transparent;
 }
 
 .topic-11NuQZ {
@@ -3632,29 +3601,6 @@
 
 .optionSelected-2AMHHJ {
     color: white;
-}
-
-.badgeIconWithSubscribers-2WYJsQ,
-.theme-dark .tierMarkerInProgress-2Tdxjz .currentTierIcon-2rq-bv.tier3Icon-959FdD,
-.theme-dark .icon-3dkE_X,
-.tierMarkerLabelPlusIcon-2zLkr7 {
-    color: #FF2EB9;
-}
-
-.tierMarkerInProgress-2Tdxjz[style*="background:"] {
-    background: #21252B !important;
-}
-
-.tierMarkerAccomplished-1SkbEJ[style*="background:"] {
-    background: #FF2EB9 !important;
-}
-
-.barForeground-2kwBa_ {
-    background-color: #FF2EB9;
-}
-
-.tierMarkerLabelText-1wk8KK:not(.isAccomplished-2NcqRT):hover {
-    background-color: rgba(255, 46, 185, .3);
 }
 
 .premiumIcon-3qxLdX {
@@ -3929,10 +3875,10 @@
     background-color: rgba(0, 0, 0, .3);
 }
 
-.theme-dark .tierHeaderLocked-3ItHYn {
-    background-color: rgba(0, 0, 0, .4);
-    color: rgba(255, 255, 255, .4);
-}
+
+
+
+
 
 .theme-dark .content-3nJg0c:before {
     background-color: transparent;
@@ -4235,4 +4181,8 @@
 
 .footer-IubaaS {
     background-color: transparent;
+}
+
+.bd-sidebar-header h2 {
+    color: white;
 }
