--- a/My_Theme_Collection/Youtube_Nation.theme.css
+++ b/My_Theme_Collection/Youtube_Nation.theme.css
@@ -2,7 +2,7 @@
  * @name Youtube Nation
  * @author ShadowDevilsAvenged
  * @description The Storage of All Videos
- * @version 1.7
+ * @version 1.8
 */
 
 .app-2CXKsg, 
@@ -1549,54 +1549,8 @@
     color: #F1F1F1;
 }
 
-.theme-dark .perksModal-CLcR1c {
-    background-color: #282828;
-}
-
 .defaultColor-1EVLSt a {
     color: #3ea6ff;
-}
-
-.ctaBar-Nhk8yY {
-    border-radius: 20px;
-    background-color: #282828;
-    border: 1px solid rgba(255, 255, 255, .1);
-}
-
-.theme-dark .tierMarkerBackground-G8FoN4 {
-    background-color: transparent;
-}
-
-.tierMarkerInProgress-2Tdxjz[style*="background:"] {
-    background: rgba(255, 255, 255, .1) !important;
-}
-
-.theme-dark .barBackground-unEPDT {
-    background-color: rgba(255, 255, 255, .1);
-}
-
-.tierMarkerAccomplished-1SkbEJ[style*="background"] {
-    background: #FF0000 !important;
-}
-
-.barForeground-2kwBa_ {
-    background-color: #FF0000;
-}
-
-.theme-dark .tierMarkerInProgress-2Tdxjz .currentTierIcon-2rq-bv.tier3Icon-959FdD {
-    color: white;
-}
-
-.badgeIconWithSubscribers-2WYJsQ,
-.theme-dark .icon-3dkE_X {
-    color: #FF0000;
-}
-
-.theme-dark .tierHeaderLocked-3ItHYn {
-    background-color: #282828;
-    color: #aaa;
-    border: 1px solid rgba(255, 255, 255, .2);
-    border-bottom: none;
 }
 
 .theme-dark .tierHeaderLocked-30MLlO, 
@@ -1607,7 +1561,6 @@
     border-bottom: none;
 }
 
-.theme-dark .tierBody-3ju-rc,
 .theme-dark .tierBody-1d3UiS {
     background-color: #282828;
     border: 1px solid rgba(255, 255, 255, .2);
@@ -1616,15 +1569,6 @@
 
 .theme-dark .tierBody-1d3UiS {
     color: #F1F1F1;
-}
-
-.theme-dark .perk-19D_HN {
-    background-color: #282828;
-    border: 1px solid rgba(255, 255, 255, .1);
-}
-
-.divider-1MSaR9 {
-    background: none;
 }
 
 .channelIcon-2x-GOw {
@@ -1650,17 +1594,9 @@
     border: 1px solid rgba(255, 255, 255, .1);
 }
 
-.inviteBannerUpsell-1t_LYM a {
-    color: #3ea6ff;
-    font-weight: 600;
-}
 
-.defaultColor-1EVLSt a {
-    font-weight: 600;
-}
-
-.theme-dark .separator-3C440w {
-    box-shadow: none;
+.theme-dark .tierBody-1d3UiS {
+    color: #F1F1F1;
 }
 
 .quickSelectLabel-ArUyd9 {
@@ -4307,4 +4243,8 @@
 
 .footer-IubaaS {
     background-color: transparent;
+}
+
+.bd-sidebar-header h2 {
+    color: white;
 }
