--- a/My_Theme_Collection/BubbleThemev3.theme.css
+++ b/My_Theme_Collection/BubbleThemev3.theme.css
@@ -2,7 +2,7 @@
  * @name Bubble Theme v3
  * @author ShadowDevilsAvenged
  * @description Bubbles, Bubbles and more Bubbles.
- * @version 3.6
+ * @version 3.7
  */
 
  .app-2CXKsg {
@@ -79,9 +79,7 @@
     border-radius: 50pc;
 }
 
-.theme-dark .perksModal-CLcR1c {
-    background-color: transparent;
-}
+
 
 .headerBlurb-m6Avyp {
     color: white;
@@ -91,23 +89,15 @@
     color: white;
 }
 
-.theme-dark .tierBody-3ju-rc {
-    background-color: transparent;
-}
 
 
-.theme-dark .tierHeaderLocked-3ItHYn {
-    background-color: transparent;
-    color: white;
-}
 
-.ctaBar-Nhk8yY {
-    background-color: transparent;
-}
 
-.theme-dark .tierMarkerBackground-G8FoN4 {
-    background-color: transparent;
-}
+
+
+
+
+ 
 
 
 
@@ -3585,23 +3575,6 @@
     box-shadow: none;
 }
 
-
-.theme-dark .perk-19D_HN {
-    background-color: rgba(0,0,0,.4);
-}
-
-.divider-1MSaR9 {
-    background: none;
-}
-
-.theme-dark .barBackground-unEPDT {
-    background-color: transparent;
-}
-
-.barSecondary-VouwoY {
-    background-color: rgba(255,255,255,.12);
-}
-
 .theme-dark .elevationBorderLow-3_3rXL {
     box-shadow: none;
 }
@@ -3955,29 +3928,6 @@
 
 .selectPlanDivider-1j8LTI {
     background-color: transparent;
-}
-
-.badgeIconWithSubscribers-2WYJsQ,
-.theme-dark .tierMarkerInProgress-2Tdxjz .currentTierIcon-2rq-bv.tier3Icon-959FdD,
-.theme-dark .icon-3dkE_X,
-.tierMarkerLabelPlusIcon-2zLkr7 {
-    color: #FF2EB9;
-}
-
-.tierMarkerInProgress-2Tdxjz[style*="background:"] {
-    background: #21252B !important;
-}
-
-.tierMarkerAccomplished-1SkbEJ[style*="background:"] {
-    background: #FF2EB9 !important;
-}
-
-.barForeground-2kwBa_ {
-    background-color: #FF2EB9;
-}
-
-.tierMarkerLabelText-1wk8KK:not(.isAccomplished-2NcqRT):hover {
-    background-color: rgba(255, 46, 185, .3);
 }
 
 .premiumIcon-3qxLdX {
@@ -4539,4 +4489,8 @@
 
 .footer-IubaaS {
     background-color: transparent;
+}
+
+.bd-sidebar-header h2 {
+    color: white;
 }
