--- a/My_Theme_Collection/NewAkameGaKill.theme.css
+++ b/My_Theme_Collection/NewAkameGaKill.theme.css
@@ -2,7 +2,7 @@
  * @name New Akame Ga Kill! Theme
  * @author ShadowDevilsAvenged
  * @description Newer Akame Ga Kill! theme for my return
- * @version 4.9
+ * @version 5
  */
 
 /* Main Background */
@@ -26,9 +26,7 @@
     background-color: transparent;
 }
 
-.theme-dark .perksModal-CLcR1c {
-    background-color: transparent;
-}
+
 
 .preview-3SR4Rd {
     color: white;
@@ -3279,24 +3277,7 @@ border-top-color: #912;
 
 .theme-dark .inviteSettingsInviteRow-FAjfDN {
     box-shadow: none;
-}
-
-
-.theme-dark .perk-19D_HN {
-    background-color: rgba(0,0,0,.4);
-}
-
-.divider-1MSaR9 {
-    background: none;
-}
-
-.theme-dark .barBackground-unEPDT {
-    background-color: transparent;
-}
-
-.barSecondary-VouwoY {
-    background-color: rgba(255,255,255,.12);
-}
+} 
 
 .theme-dark .elevationBorderLow-3_3rXL {
     box-shadow: none;
@@ -3377,11 +3358,6 @@ border-top-color: #912;
     color: white;
 }
 
-.theme-dark .tierBody-3ju-rc {
-    background-color: transparent;
-    color: white;
-}
-
 .body-1JxAWB a,
 .text-2iTkaw a {
     color: #FFFF90;
@@ -3394,14 +3370,6 @@ border-top-color: #912;
 
 .stickyHeaderElevated-dNSSrJ {
     box-shadow: none;
-}
-
-.ctaBar-Nhk8yY {
-    background-color: rgba(0,0,0,.6);
-}
-
-.theme-dark .tierMarkerBackground-G8FoN4 {
-    background-color: transparent;
 }
 
 .topic-11NuQZ {
@@ -3694,29 +3662,6 @@ border-top-color: #912;
     background-color: transparent;
 }
 
-.badgeIconWithSubscribers-2WYJsQ,
-.theme-dark .tierMarkerInProgress-2Tdxjz .currentTierIcon-2rq-bv.tier3Icon-959FdD,
-.theme-dark .icon-3dkE_X,
-.tierMarkerLabelPlusIcon-2zLkr7 {
-    color: #FF2EB9;
-}
-
-.tierMarkerInProgress-2Tdxjz[style*="background:"] {
-    background: #21252B !important;
-}
-
-.tierMarkerAccomplished-1SkbEJ[style*="background:"] {
-    background: #FF2EB9 !important;
-}
-
-.barForeground-2kwBa_ {
-    background-color: #FF2EB9;
-}
-
-.tierMarkerLabelText-1wk8KK:not(.isAccomplished-2NcqRT):hover {
-    background-color: rgba(255, 46, 185, .3);
-}
-
 .premiumIcon-3qxLdX {
     color: #FF2EB9;
 }
@@ -3989,10 +3934,10 @@ border-top-color: #912;
     background-color: rgba(0, 0, 0, .3);
 }
 
-.theme-dark .tierHeaderLocked-3ItHYn {
-    background-color: rgba(0, 0, 0, .4);
-    color: rgba(255, 255, 255, .4);
-}
+
+
+
+
 
 .theme-dark .content-3nJg0c:before {
     background-color: transparent;
@@ -4274,6 +4219,10 @@ border-top-color: #912;
 
 .footer-IubaaS {
     background-color: transparent;
+}
+
+.bd-sidebar-header h2 {
+    color: white;
 }
 
 
