--- a/My_Theme_Collection/Old-AkameGaKill-Theme.theme.css
+++ b/My_Theme_Collection/Old-AkameGaKill-Theme.theme.css
@@ -2,7 +2,7 @@
  * @name Old-Akame_Ga_Kill-Theme
  * @author ShadowDevilsAvenged
  * @description Akame from Akame No Kill
- * @version 4.5
+ * @version 4.6
  */
 
  #app-mount .app-2CXKsg {
@@ -2845,7 +2845,7 @@
   mask: none;
 }
 
-.theme-dark .perksModal-CLcR1c,
+
 .notice-5OG6bf,
 .roleRow-3LoHQ6:before, 
 .roleRow-3LoHQ6:last-child:after {
@@ -3866,23 +3866,6 @@ border-top-color: #9b2742;
   box-shadow: none;
 }
 
-
-.theme-dark .perk-19D_HN {
-  background-color: rgba(0,0,0,.4);
-}
-
-.divider-1MSaR9 {
-  background: none;
-}
-
-.theme-dark .barBackground-unEPDT {
-  background-color: transparent;
-}
-
-.barSecondary-VouwoY {
-  background-color: rgba(255,255,255,.12);
-}
-
 .theme-dark .elevationBorderLow-3_3rXL {
   box-shadow: none;
 }
@@ -3965,11 +3948,6 @@ border-top-color: #9b2742;
   background: rgba(0,0,0,.6);
 }
 
-.theme-dark .tierBody-3ju-rc {
-  background-color: transparent;
-  color: white;
-}
-
 .body-1JxAWB a,
 .text-2iTkaw a {
     color: #FFFF90;
@@ -3984,20 +3962,13 @@ border-top-color: #9b2742;
   box-shadow: none;
 }
 
-.ctaBar-Nhk8yY {
-  background-color: rgba(0,0,0,.6);
-}
-
-.theme-dark .tierMarkerBackground-G8FoN4 {
-  background-color: transparent;
-}
 
 .theme-dark .elevationLow-26BbEG {
   box-shadow: none;
 }
 
 .learnMoreLink-2JwgbJ {
-  color: #84E7FF;
+  color: #FFF88D;
 }
 
 .divider-1wnNcY {
@@ -4233,29 +4204,6 @@ border-top-color: #9b2742;
 
 .selectPlanDivider-1j8LTI {
   background-color: transparent;
-}
-
-.badgeIconWithSubscribers-2WYJsQ,
-.theme-dark .tierMarkerInProgress-2Tdxjz .currentTierIcon-2rq-bv.tier3Icon-959FdD,
-.theme-dark .icon-3dkE_X,
-.tierMarkerLabelPlusIcon-2zLkr7 {
-    color: #FF2EB9;
-}
-
-.tierMarkerInProgress-2Tdxjz[style*="background:"] {
-  background: #21252B !important;
-}
-
-.tierMarkerAccomplished-1SkbEJ[style*="background:"] {
-  background: #FF2EB9 !important;
-}
-
-.barForeground-2kwBa_ {
-  background-color: #FF2EB9;
-}
-
-.tierMarkerLabelText-1wk8KK:not(.isAccomplished-2NcqRT):hover {
-  background-color: rgba(255, 46, 185, .3);
 }
 
 .premiumIcon-3qxLdX {
@@ -4530,10 +4478,10 @@ border-top-color: #9b2742;
   background-color: rgba(0, 0, 0, .3);
 }
 
-.theme-dark .tierHeaderLocked-3ItHYn {
-  background-color: rgba(0, 0, 0, .4);
-  color: rgba(255, 255, 255, .4);
-}
+
+
+
+
 
 .iconWrapper-1sOtkE {
   background-color: #433E97;
@@ -4822,4 +4770,8 @@ fill: white;
 
 .footer-IubaaS {
   background-color: transparent;
+}
+
+.bd-sidebar-header h2 {
+  color: white;
 }
