--- a/My_Theme_Collection/NewAkameGaKill.theme.css
+++ b/My_Theme_Collection/NewAkameGaKill.theme.css
@@ -2,7 +2,7 @@
  * @name New Akame Ga Kill! Theme
  * @author ShadowDevilsAvenged
  * @description Newer Akame Ga Kill! theme for my return
- * @version 5
+ * @version 5.1
  */
 
 /* Main Background */
@@ -2109,7 +2109,7 @@
     background-color: transparent;
 }
 
-.iconWrapper-3plkqh {
+.iconWrapper-1CGrJp {
     border-radius: 4px;
     background-color: #912;
 }
@@ -4223,6 +4223,15 @@ border-top-color: #912;
 
 .bd-sidebar-header h2 {
     color: white;
+}
+
+.modalHeader-1hF3w-,
+.modalBody-3-seO3 {
+    background-color: transparent;
+}
+
+.modalFooter-Ywt9Jo {
+    background-color: transparent!important;
 }
 
 
