--- a/My_Theme_Collection/NewBNHA.theme.css
+++ b/My_Theme_Collection/NewBNHA.theme.css
@@ -2,7 +2,7 @@
  * @name New BNHA Theme
  * @author ShadowDevilsAvenged
  * @description Newer BNHA theme for my return
- * @version 4.6
+ * @version 4.7
  */
 
 /* Main Background */
@@ -1874,7 +1874,7 @@
     background-image: -webkit-radial-gradient(50% 50%, ellipse cover, #22a9bb 0%, #000000 95%);
 }
 
-.iconWrapper-3plkqh {
+.iconWrapper-1CGrJp {
     border-radius: 4px;
     background-color: #2AB;
 }
@@ -4119,6 +4119,15 @@
 
 .footer-IubaaS {
     background-color: transparent;
+}
+
+.modalHeader-1hF3w-,
+.modalBody-3-seO3 {
+    background-color: transparent;
+}
+
+.modalFooter-Ywt9Jo {
+    background-color: transparent!important;
 }
 
 .bd-sidebar-header h2 {
