--- a/My_Theme_Collection/NewKemonoFriends.theme.css
+++ b/My_Theme_Collection/NewKemonoFriends.theme.css
@@ -2,7 +2,7 @@
  * @name New Kemono Friends Theme
  * @author ShadowDevilsAvenged
  * @description Newer Kemono Friends theme for my return
- * @version 4.6
+ * @version 4.7
  */
 
 /* Main Background */
@@ -2416,7 +2416,7 @@ background-color: transparent  !important;
     background-image: -webkit-radial-gradient(50% 53%, ellipse cover, #292929 15%, #000000 71%);
 }
 
-.iconWrapper-3plkqh {
+.iconWrapper-1CGrJp {
     border-radius: 4px;
     background-color: #f44;
 }
@@ -4405,6 +4405,15 @@ border-top-color: #f44;
 
 .footer-IubaaS {
     background-color: transparent;
+}
+
+.modalHeader-1hF3w-,
+.modalBody-3-seO3 {
+    background-color: transparent;
+}
+
+.modalFooter-Ywt9Jo {
+    background-color: transparent!important;
 }
 
 .bd-sidebar-header h2 {
