--- a/My_Theme_Collection/NewRemTheme.theme.css
+++ b/My_Theme_Collection/NewRemTheme.theme.css
@@ -2,7 +2,7 @@
  * @name New Rem Theme
  * @author ShadowDevilsAvenged
  * @description Newer Rem theme for my return
- * @version 4.6
+ * @version 4.7
  */
 
  .app-2CXKsg {
@@ -693,7 +693,7 @@
     background: rgba(0,0,0,.25);
 }
 
-.iconWrapper-3plkqh {
+.iconWrapper-1CGrJp {
     border-radius: 5px;
     background-color: rgba(97, 164, 216, .72);
     box-shadow: rgba(97, 165, 216, .8) 2px 2px 2px 0px, rgba(97, 165, 216, .8) 2px 2px 2px 0px;
@@ -4100,6 +4100,15 @@
 
 .footer-IubaaS {
     background-color: transparent;
+}
+
+.modalHeader-1hF3w-,
+.modalBody-3-seO3 {
+    background-color: transparent;
+}
+
+.modalFooter-Ywt9Jo {
+    background-color: transparent!important;
 }
 
 .bd-sidebar-header h2 {
