--- a/My_Theme_Collection/NightTimeMountain.theme.css
+++ b/My_Theme_Collection/NightTimeMountain.theme.css
@@ -2,7 +2,7 @@
  * @name Night Time Mountain
  * @author ShadowDevilsAvenged
  * @description Nice view of the mountain in the night time
- * @version 2.1
+ * @version 2.2
 */
 
 .app-2CXKsg {
@@ -4280,7 +4280,7 @@
     background-color: rgba(255, 255, 255, .15);
 }
 
-.iconWrapper-3plkqh {
+.iconWrapper-1CGrJp {
     background-color: black;
 }
 
@@ -4348,4 +4348,13 @@
 
 .bd-sidebar-header h2 {
     color: white;
+}
+
+.modalHeader-1hF3w-,
+.modalBody-3-seO3 {
+    background-color: transparent;
+}
+
+.modalFooter-Ywt9Jo {
+    background-color: transparent!important;
 }
