--- a/My_Theme_Collection/Old-BNHA-Theme.theme.css
+++ b/My_Theme_Collection/Old-BNHA-Theme.theme.css
@@ -2,7 +2,7 @@
  * @name Old BNHA Theme Returns
  * @author ShadowDevilsAvenged
  * @description Say Hello to the BNHA theme once again
- * @version 4.6
+ * @version 4.7
 */
 
 @import url("https://fonts.googleapis.com/css?family=Livvic&display=swap");
@@ -4219,7 +4219,7 @@ textarea,
     background-color: rgba(255, 255, 255, .15);
 }
 
-.iconWrapper-3plkqh {
+.iconWrapper-1CGrJp {
     background-color: black;
 }
 
@@ -4287,6 +4287,15 @@ textarea,
 
 .footer-IubaaS {
     background-color: transparent;
+}
+
+.modalHeader-1hF3w-,
+.modalBody-3-seO3 {
+    background-color: transparent;
+}
+
+.modalFooter-Ywt9Jo {
+    background-color: transparent!important;
 }
 
 .bd-sidebar-header h2 {
