--- a/My_Theme_Collection/TeamRam.theme.css
+++ b/My_Theme_Collection/TeamRam.theme.css
@@ -2,7 +2,7 @@
  * @name Team Ram
  * @author ShadowDevilsAvenged
  * @description Team Ram is back once again(big request to bring this back)
- * @version 2.3
+ * @version 2.4
 */
 
 /* Ram Main Picture */
@@ -4113,7 +4113,7 @@
     background-color: rgba(255, 255, 255, .15);
 }
 
-.iconWrapper-3plkqh {
+.iconWrapper-1CGrJp {
     background-color: black;
 }
 
@@ -4181,6 +4181,15 @@
 
 .footer-IubaaS {
     background-color: transparent;
+}
+
+.modalHeader-1hF3w-,
+.modalBody-3-seO3 {
+    background-color: transparent;
+}
+
+.modalFooter-Ywt9Jo {
+    background-color: transparent!important;
 }
 
 .bd-sidebar-header h2 {
