--- a/My_Theme_Collection/Youtube_Nation.theme.css
+++ b/My_Theme_Collection/Youtube_Nation.theme.css
@@ -2,7 +2,7 @@
  * @name Youtube Nation
  * @author ShadowDevilsAvenged
  * @description The Storage of All Videos
- * @version 1.8
+ * @version 1.9
 */
 
 .app-2CXKsg, 
@@ -1466,7 +1466,7 @@
 }
 
 .theme-dark .item-4m-12I,
-.theme-dark .item-2XHlPv {
+.theme-dark .item-14XeNr {
     background-color: #282828;
 }
 
@@ -4178,7 +4178,7 @@
     background-color: rgba(255, 255, 255, .15);
 }
 
-.iconWrapper-3plkqh {
+.iconWrapper-1CGrJp {
     background-color: black;
 }
 
@@ -4243,6 +4243,15 @@
 
 .footer-IubaaS {
     background-color: transparent;
+}
+
+.modalHeader-1hF3w-,
+.modalBody-3-seO3 {
+    background-color: transparent;
+}
+
+.modalFooter-Ywt9Jo {
+    background-color: transparent!important;
 }
 
 .bd-sidebar-header h2 {
