--- a/My_Theme_Collection/Old-AkameGaKill-Theme.theme.css
+++ b/My_Theme_Collection/Old-AkameGaKill-Theme.theme.css
@@ -2,7 +2,7 @@
  * @name Old-Akame_Ga_Kill-Theme
  * @author ShadowDevilsAvenged
  * @description Akame from Akame No Kill
- * @version 4.6
+ * @version 4.7
  */
 
  #app-mount .app-2CXKsg {
@@ -2829,7 +2829,7 @@
   background-color: transparent;
 }
 
-.iconWrapper-3plkqh {
+.iconWrapper-1CGrJp {
   border-radius: 4px;
   background-color: #9b2742;
 }
@@ -4774,4 +4774,13 @@ fill: white;
 
 .bd-sidebar-header h2 {
   color: white;
+}
+
+.modalHeader-1hF3w-,
+.modalBody-3-seO3 {
+    background-color: transparent;
+}
+
+.modalFooter-Ywt9Jo {
+    background-color: transparent!important;
 }
