--- a/My_Theme_Collection/NewKemonoFriends.theme.css
+++ b/My_Theme_Collection/NewKemonoFriends.theme.css
@@ -2,7 +2,7 @@
  * @name New Kemono Friends Theme
  * @author ShadowDevilsAvenged
  * @description Newer Kemono Friends theme for my return
- * @version 4.7
+ * @version 4.8
  */
 
 /* Main Background */
@@ -236,6 +236,10 @@
     background: none;
 }
 
+.divider-3nqZNm {
+    border: none;
+}
+
 .emojiItem-277VFM.emojiItemSelected-2Lg50V {
     background-color: rgba(0,0,0,.3);
 }
@@ -296,6 +300,11 @@
 
 .lookLink-13iF2K.colorLink-34zig_ {
     color: #F44;
+}
+
+.option-Uc12mm[aria-selected=true]:not(.option-Uc12mm.multi-2vPqc4) {
+    color: white !important;
+    background-color: black !important;
 }
 
 .avatar-3mTjvZ {
@@ -4384,23 +4393,6 @@ border-top-color: #f44;
 
 .resizeHandle-PBRzPC {
     background: none;
-}
-
-.stageUpsell-hekoJb {
-    border: 2px solid rgba(255, 255, 255, .2);
-    background-color: rgba(0, 0, 0, .3);
-}
-
-.stageUpsellImage-2C_WNd {
-    background-color: transparent;
-}
-
-.permissionV3BannerContainer-3_4aSa {
-    background-color: black;
-}
-
-.permissionV3BannerContainer-3_4aSa a {
-    color: #B8E8E0;
 }
 
 .footer-IubaaS {
