--- a/My_Theme_Collection/Old-AkameGaKill-Theme.theme.css
+++ b/My_Theme_Collection/Old-AkameGaKill-Theme.theme.css
@@ -2,7 +2,7 @@
  * @name Old-Akame_Ga_Kill-Theme
  * @author ShadowDevilsAvenged
  * @description Akame from Akame No Kill
- * @version 4.7
+ * @version 4.8
  */
 
  #app-mount .app-2CXKsg {
@@ -270,6 +270,10 @@
 
 .theme-dark .divider-3wNib3 {
   border: none;
+}
+
+.itemFilled-2Fo7lr[aria-checked=true] {
+  background-color: black;
 }
 
 .input-m1-Y7Q {
@@ -686,6 +690,10 @@
 .lookFilled-GPyucw.select-Zz0IcO {
   background-color: #101010;
   border-color: #9b2742;
+}
+
+.wrapper-mJT04A {
+  color: white;
 }
 
 .lookFilled-GPyucw.select-Zz0IcO:focus {
@@ -4749,23 +4757,6 @@ fill: white;
 
 .resizeHandle-PBRzPC {
   background: none;
-}
-
-.stageUpsell-hekoJb {
-  border: 2px solid rgba(255, 255, 255, .2);
-  background-color: rgba(0, 0, 0, .3);
-}
-
-.stageUpsellImage-2C_WNd {
-  background-color: transparent;
-}
-
-.permissionV3BannerContainer-3_4aSa {
-  background-color: black;
-}
-
-.permissionV3BannerContainer-3_4aSa a {
-  color: #B8E8E0;
 }
 
 .footer-IubaaS {
